<resources>
    <string name="app_name">美艺</string>

    <string name="homepagetypecut">洗剪吹</string>
    <string name="homepagetypehaircare">护发</string>
    <string name="homepagetypehaircolor">染发</string>
    <string name="homepagetypeperm">烫发</string>
    <string name="arrangstylist">约发型师</string>
    <string name="near_good_shop">身边好店</string>
    <string name="loading">加载中</string>
    <string name="login">去登录</string>
    <string name="shopcart_watch">去逛逛</string>
    <string name="no_resarch_hint">搜索无结果</string>
    <string name="edit_hint">输入店铺名称</string>
    <string name="saynum">评价数</string>
    <string name="manyishu">满意数</string>
    <string name="manyidu">满意度</string>
    <string name="no_stylist">暂无对应等级发型师</string>
    <string name="phone_msg">电话咨询</string>
    <string name="booking_money">预约金</string>
    <string name="booking">立即预约</string>
    <string name="choumei_price_msg">优惠价 ¥</string>
    <string name="mycollect_item_name_orig">原价</string>
    <string name="select_all">全选</string>
    <string name="settlement_count">结算</string>
    <string name="in_total">合计:</string>
    <string name="shopping_cart_empty">您的购物车很空虚哦~</string>
    <string name="shopcart_login">去登录</string>
    <string name="shop_comment_num">"评价数:  "</string>
    <string name="shop_satisfaction">"满意度:  "</string>

    <!--普通用户个人中心-->
    <string-array name="general_text">
        <item>我的收藏</item>
        <item>我的订单</item>
        <item>优惠券</item>
        <item>去评分</item>
        <item>版本号</item>
    </string-array>
    <integer-array name="general_img">
        <item>@drawable/mine1</item>
        <item>@drawable/mine2</item>
        <item>@drawable/mine3</item>
        <item>@drawable/mine4</item>
        <item>@drawable/mine5</item>
    </integer-array>
</resources>
