<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_hair_item"
        android:layout_width="fill_parent"
        android:layout_height="90.0dip"
        android:layout_marginLeft="7.5dip"
        android:layout_marginRight="7.5dip"
        android:layout_marginTop="7.5dip"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_wash_cut_blow"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_click_choumeimeifa_item">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15.0dip"
                android:background="@mipmap/shouye_icon_xijianchui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18.0dip"
                android:text="@string/homepagetypecut"
                android:textColor="@color/black_51"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_hair_perm"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_click_choumeimeifa_item">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15.0dip"
                android:background="@mipmap/shouye_icon_tangfa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18.0dip"
                android:text="@string/homepagetypeperm"
                android:textColor="@color/black_51"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_hair_dye"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_click_choumeimeifa_item">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15.0dip"
                android:background="@mipmap/shouye_icon_ranfa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18.0dip"
                android:text="@string/homepagetypehaircolor"
                android:textColor="@color/black_51"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_hu_fa"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_click_choumeimeifa_item">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15.0dip"
                android:background="@mipmap/shouye_icon_hufa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18.0dip"
                android:text="@string/homepagetypehaircare"
                android:textColor="@color/black_51"
                android:textSize="12.0sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>