<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_list_bigimage"
        android:layout_width="fill_parent"
        android:layout_height="141.0dip"
        android:background="@drawable/quanchenghaodian_morentu"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_list_salonname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:layout_marginLeft="10dp"
        android:text="yuindsadsafdasdfas"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/iv_locationmap"
            android:layout_width="12.0dip"
            android:layout_height="12.0dip"
            android:layout_marginLeft="10dip"
            android:background="@drawable/dizhi_icon_selector" />

        <TextView
            android:id="@+id/tv_list_localname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/iv_locationmap"
            android:text="南头"
            android:textColor="@color/light_gray"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/tv_list_leave_lately"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="1.5km"
            android:textColor="@color/light_gray" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_list_saynum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saynum"
                android:textColor="@color/light_gray"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/tv_list_saynum_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3.0dip"
                android:text="18008"
                android:textColor="@color/pink"
                android:textSize="12.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/manyishu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manyishu"
                android:textColor="@color/light_gray"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/tv_manyishu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3.0dip"
                android:text="88.58%"
                android:textColor="@color/pink"
                android:textSize="12.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/manyidu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5.0dip"
                android:text="@string/manyidu"
                android:textColor="@color/light_gray"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/tv_manyidu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:text="88.58%"
                android:textColor="@color/pink"
                android:textSize="12.0sp" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/divider_color"/>
</LinearLayout>